[package]
name = "perbase"
version = "0.10.1"
authors = ["Seth Stadick <sstadick@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/sstadick/perbase"
description = "Fast and correct perbase BAM/CRAM analysis."
documentation = "https://docs.rs/perbase"
readme = "README.md"
categories = ["science"]
keywords = ["depth", "coverage", "bioinformatics", "genomic"]

[profile.release]
lto = "fat"
codegen-units = 1

[lib]
name = "perbase_lib"
path = "src/lib/mod.rs"

[[bin]]
name = "perbase"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.93"
bio = "2.0"
crossbeam = "0.8"
crossbeam-channel = "0.5"
csv = "1.3.1"
env_logger = "0.11.5"
grep-cli = "0.1.11"
gzp = "0.11"
itertools = "0.13.0"
lazy_static = "1.5.0"
log = "0.4.22"
lru_time_cache = "0.11.11"
num_cpus = "1.16.0"
rayon = "1.10.0"
#TODO add  features = ["libdeflate"] when https://github.com/rust-bio/rust-htslib/pull/341 is merged
rust-htslib = {version = "0.48"}
rust-lapper = "1.1"
serde = { version = "1.0.215", features = ["derive"] }
smartstring = { version = "1.0.1", features = ["serde"] }
structopt = "0.3.26"
termcolor = "1.4.1"

[dev-dependencies]
proptest = "1.5.0"
rstest = "0.23.0"
tempfile = "3.14.0"

